// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Group /> renders with children 1`] = `
<div
  className="as-m-group as-m-group--xs as-m-group--align-left"
>
  <div>
    Children
  </div>
</div>
`;

exports[`<Group /> renders with column prop: with column prop 1`] = `
<div
  className="as-m-group as-m-group--xs as-m-group--align-left as-m-group--column"
/>
`;

exports[`<Group /> renders with default props 1`] = `
<div
  className="as-m-group as-m-group--xs as-m-group--align-left"
/>
`;

exports[`<Group /> renders with equalSize prop: with inlineUniform prop 1`] = `
<div
  className="as-m-group as-m-group--xs as-m-group--equal-size as-m-group--align-left"
/>
`;

exports[`<Group /> renders with props 1`] = `
<div
  className="as-m-group as-m-group--m as-m-group--inline as-m-group--align-center as-m-group--valign-center as-m-group--full-height as-m-grout-test"
  data-analytics-bannerid="dataAnalyticsBannerid"
  data-qa="dataQA"
/>
`;

exports[`<Group /> renders with wrap prop: with wrap prop 1`] = `
<div
  className="as-m-group as-m-group--xs as-m-group--align-left as-m-group--wrap-wrap-reverse"
/>
`;
